force-app/main/default/objects/AFI_Knowledge__kav/fields/Benefit_Product__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Product__c</fullName>
    <label>Benefit Product</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>