force-app/main/default/objects/AFI_Knowledge__kav/fields/Juklak_File__c.field-meta.xml
<CustomField>
    <fullName>Juklak_File__c</fullName>
    <label>Juklak File</label>
    <type>File</type>
</CustomField>