force-app/main/default/objects/AFI_Knowledge__kav/fields/Juklak_Sistem_dan_Aplikasi__c.field-meta.xml
<CustomField>
    <fullName>Juklak_Sistem_dan_Aplikasi__c</fullName>
    <label>Juklak Sistem dan Aplikasi</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>