force-app/main/default/objects/AFI_Knowledge__kav/fields/List_RS_Rekanan__c.field-meta.xml
<CustomField>
    <fullName>List_RS_Rekanan__c</fullName>
    <label>List RS Rekanan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>