force-app/main/default/objects/AFI_Knowledge__kav/fields/List_RS_Rekanan_File__c.field-meta.xml
<CustomField>
    <fullName>List_RS_Rekanan_File__c</fullName>
    <label>List RS Rekanan File</label>
    <type>File</type>
</CustomField>