force-app/main/default/objects/AFI_Knowledge__kav/fields/Provision__c.field-meta.xml
<CustomField>
    <fullName>Provision__c</fullName>
    <label>Provision</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>