force-app/main/default/objects/AFI_Knowledge__kav/fields/Provision_File__c.field-meta.xml
<CustomField>
    <fullName>Provision_File__c</fullName>
    <label>Provision File</label>
    <type>File</type>
</CustomField>