force-app/main/default/objects/AFI_Knowledge__kav/fields/Spec_Prod_File__c.field-meta.xml
<CustomField>
    <fullName>Spec_Prod_File__c</fullName>
    <label>Spec &amp; Prod File</label>
    <type>File</type>
</CustomField>