force-app/main/default/objects/AFI_Knowledge__kav/fields/Specification_Product__c.field-meta.xml
<CustomField>
    <fullName>Specification_Product__c</fullName>
    <label>Specification Product</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>