force-app/main/default/objects/AFI_Knowledge__kav/fields/Syarat_dan_Ketentuan_File__c.field-meta.xml
<CustomField>
    <fullName>Syarat_dan_Ketentuan_File__c</fullName>
    <label>Syarat dan Ketentuan File</label>
    <type>File</type>
</CustomField>